[FLINK-38963][table] Altering query should be possible if `MATERIALIZED TABLE` schema contains non persisted columns